tests/baselines/reference/typeAssertionToGenericFunctionType.errors.txt
typeAssertionToGenericFunctionType.ts(5,13): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
typeAssertionToGenericFunctionType.ts(6,3): error TS2554: Expected 1 arguments, but got 0.


==== typeAssertionToGenericFunctionType.ts (2 errors) ====
    var x = {
        a: < <T>(x: T) => T > ((x: any) => 1),
        b: <T>(x: T) => { x }
    }
    x.a<string>(1); // bug was that this caused 'Could not find symbol T' on return type T in the type assertion on x.a's definition
                ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    x.b<string>(); // error
      ~
!!! error TS2554: Expected 1 arguments, but got 0.
!!! related TS6210 typeAssertionToGenericFunctionType.ts:3:12: An argument for 'x' was not provided.